# GoodBotLearning

./: .gitignore  CMakeLists.txt  README  notes
modules/: FindCaffe2.cmake
src/executables/categoricalVGG/: main.cpp
src/executables/experimenter/: .main.cpp.swp  main.cpp  main.cpp.save
src/executables/unitTests/: main.cpp
